--- a/keypoint_annotation/model_metrics/Model_Metrics.ipynb
+++ b/keypoint_annotation/model_metrics/Model_Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,42 +17,38 @@
     "import torch\n",
     "\n",
     "import model_metrics_new_api\n",
-    "import avg_keypoints\n",
     "from elegant.torch import dataset\n",
-    "import worm_datasets"
+    "from keypoint_annotation.production import worm_datasets\n",
+    "from keypoint_annotation.production import production_utils\n",
+    "from keypoint_annotation.dataloaders import training_dataloaders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4515 1322 690\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = datamodel.Timepoints.from_file('/Volumes/lugia_array/Laird_Nicolette/deep_learning/keypoint_detection/new_api/production_dataloader_test/training_paths/train_path_os.txt')\n",
+    "val = datamodel.Timepoints.from_file('/Volumes/lugia_array/Laird_Nicolette/deep_learning/keypoint_detection/new_api/production_dataloader_test/training_paths/val_path_os.txt')\n",
+    "test = datamodel.Timepoints.from_file('/Volumes/lugia_array/Laird_Nicolette/deep_learning/keypoint_detection/new_api/production_dataloader_test/training_paths/test_path_os.txt')\n",
+    "print(len(train), len(val), len(test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "exp_root1 = '/mnt/lugia_array/20170919_lin-04_GFP_spe-9/'\n",
-    "exp_root2 = '/mnt/lugia_array/20190408_lin-4_spe-9_20C_pos-1/'\n",
-    "#exp_root2 = '/mnt/9karray/Mosley_Matt/20190408_lin-4_spe-9_20C_pos-1/'\n",
-    "exp_root3 = '/mnt/lugia_array/20190813_lin4gfp_spe9_control/20190813_lin4gfp_spe9_control/'\n",
-    "#exp_root3 = '/mnt/scopearray/Mosley_Matt/glp-1/20190813_lin4gfp_spe9_control'\n",
-    "\n",
-    "experiments = [datamodel.Experiment(path) for path in (exp_root1, exp_root2, exp_root3)]\n",
-    "\n",
-    "def has_pose(timepoint):\n",
-    "    pose = timepoint.annotations.get('pose', None)\n",
-    "    # make sure pose is not None, and center/width tcks are both not None\n",
-    "    return pose is not None and pose[0] is not None and pose[1] is not None\n",
-    "    \n",
-    "\n",
-    "def has_keypoints(timepoint):\n",
-    "    keypoints = timepoint.annotations.get('keypoints', None)\n",
-    "    return keypoints is not None and not None in keypoints.values() and not False in [x in keypoints.keys() for x in ['anterior bulb', 'posterior bulb', 'vulva', 'tail']]\n",
-    "\n",
-    "#filter experiments\n",
-    "for experiment in experiments:\n",
-    "    experiment.filter(timepoint_filter=(has_pose, has_keypoints))\n",
-    "\n",
-    "timepoint_list = datamodel.Timepoints.from_experiments(*experiments)\n",
-    "train, val, test = datamodel.Timepoints.split_experiments(*experiments, fractions=[0.7, 0.2, 0.1])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -16321,7 +16317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
