--- a/keypoint_annotation/Test_dev.ipynb
+++ b/keypoint_annotation/Test_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,7 @@
     "from elegant.torch import dataset\n",
     "from keypoint_annotation.production import worm_datasets\n",
     "from keypoint_annotation.production import production_utils\n",
+    "from keypoint_annotation.model_metrics import model_metrics_utils\n",
     "from keypoint_annotation.dataloaders import training_dataloaders"
    ]
   },
@@ -481,6 +482,61 @@
    ],
    "source": [
     "production_utils.normalize_pred_keypoints(tp, tp.annotations['keypoints'], downscale=1, image_size=image_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path_root = '/Volumes/lugia_array/Laird_Nicolette/deep_learning/keypoint_detection/new_api/production_dataloader_test/new_kp_maps/gaussian_kp/960x96_cov100_max1/'\n",
+    "model_paths={'ant_pharynx':model_path_root+\"ant_pharynx/bestValModel.paramOnly\", \n",
+    "             'post_pharynx':model_path_root+'post_pharynx/bestValModel.paramOnly', \n",
+    "             'vulva_class':model_path_root+'Vulva_Classifier/bestValModel.paramOnly',\n",
+    "             'vulva_kp':model_path_root+'vulva_kp/bestValModel.paramOnly', \n",
+    "             'tail':model_path_root+'tail/bestValModel.paramOnly'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true vulva:  -19.927152030063404     vulva out:  tensor([[-0.6652,  0.4475]], grad_fn=<AddmmBackward>) 1\n",
+      "using pretrained model\n",
+      "pred_x, pred_y:  83.76013721316008 47.996513027387756\n",
+      "using pretrained model\n",
+      "pred_x, pred_y:  148.8235257764317 48.004032077994864\n",
+      "using pretrained model\n",
+      "pred_x, pred_y:  556.3172177344773 13.51168376325835\n",
+      "using pretrained model\n",
+      "pred_x, pred_y:  929.5459718853875 48.02119556572814\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'anterior bulb': (83.76013721316008, 47.996513027387756),\n",
+       " 'posterior bulb': (148.8235257764317, 48.004032077994864),\n",
+       " 'vulva': (556.3172177344773, 13.51168376325835),\n",
+       " 'tail': (929.5459718853875, 48.02119556572814)}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tp = val[0]\n",
+    "img, kp_maps = data_generator(tp)\n",
+    "keypoints = tp.annotations['keypoints']\n",
+    "model_metrics_utils.predict_image(img, keypoints, downscale=downscale, model_paths=model_paths)"
    ]
   },
   {
