--- a/keypoint_annotation/Test_dev.ipynb
+++ b/keypoint_annotation/Test_dev.ipynb
@@ -270,18 +270,22 @@
     "plt.subplot(figWinNumHeight,figWinNumWidth,subwinCount)\n",
     "subwinCount += 1\n",
     "plt.imshow(kp0)\n",
+    "plt.title('Keypoint '+str(0))\n",
     "\n",
     "plt.subplot(figWinNumHeight,figWinNumWidth,subwinCount)\n",
     "subwinCount += 1\n",
     "plt.imshow(kp1)\n",
+    "plt.title('Keypoint '+str(1))\n",
     "\n",
     "plt.subplot(figWinNumHeight,figWinNumWidth,subwinCount)\n",
     "subwinCount += 1\n",
     "plt.imshow(kp2)\n",
+    "plt.title('Keypoint '+str(2))\n",
     "\n",
     "plt.subplot(figWinNumHeight,figWinNumWidth,subwinCount)\n",
     "subwinCount += 1\n",
-    "plt.imshow(kp3)"
+    "plt.imshow(kp3)\n",
+    "plt.title('Keypoint '+str(3))"
    ]
   },
   {
